--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
     <link rel="stylesheet" href="style.css" />
     <title>Rock paper Scissors</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <img src="./img/paper.png" alt="paper" />
+      <img src="./img/rock.png" alt="rock" />
+      <img src="./img/scissors.png" alt="scissors" />
+    </main>
+    <footer>
+      <a href="https://www.vecteezy.com/free-vector/rock-paper-scissors">Rock Paper Scissors Vectors by Vecteezy</a>
+    </footer>
+  </body>
 </html>
