--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <main>
+      <h1 class="title">Rock - Paper - Scissors</h1>
       <img src="./img/paper.png" alt="paper" />
       <img src="./img/rock.png" alt="rock" />
       <img src="./img/scissors.png" alt="scissors" />
