--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
   <body>
     <main>
       <h1 class="title">Rock - Paper - Scissors</h1>
-      <img src="./img/paper.png" alt="paper" />
+
       <img src="./img/rock.png" alt="rock" />
+      <img src="./img/paper.png" alt="paper" />
       <img src="./img/scissors.png" alt="scissors" />
+
+      <div class="aiMove">Computer move: rock</div>
+      <div class="playerScore">Player score:0</div>
+      <div class="aiScore">Computer score:0</div>
+      <button class="newGame__btn">New game</button>
     </main>
     <footer>
       <a href="https://www.vecteezy.com/free-vector/rock-paper-scissors">Rock Paper Scissors Vectors by Vecteezy</a>
