--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <main>
-      <h1 class="title">Rock - Paper - Scissors</h1>
+      <h1 class="title">
+        <span class="rock">Rock</span> - <span class="paper">Paper</span> -
+        <span class="scissors">Scissors</span>
+      </h1>
 
       <img src="./img/rock.png" alt="rock" />
       <img src="./img/paper.png" alt="paper" />
