game icons styling

--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
         <span class="scissors">Scissors</span>
       </h1>
 
-      <img src="./img/rock.png" alt="rock" />
-      <img src="./img/paper.png" alt="paper" />
-      <img src="./img/scissors.png" alt="scissors" />
+      <div class="gameIcons">
+        <img src="./img/rock.png" alt="rock" class="gameIcon rock" />
+        <img src="./img/paper.png" alt="paper" class="gameIcon paper" />
+        <img src="./img/scissors.png" alt="scissors" class="gameIcon scissors" />
+      </div>
 
-      <div class="aiMove">Computer move: rock</div>
-      <div class="playerScore">Player score:0</div>
-      <div class="aiScore">Computer score:0</div>
+      <div class="gameControls">
+        <div class="aiMove">Computer move: rock</div>
+        <div class="playerScore">Player score:0</div>
+        <div class="aiScore">Computer score:0</div>
+      </div>
       <button class="newGame__btn">New game</button>
     </main>
     <footer>
