--- a/index.html
+++ b/index.html
@@ -19,15 +19,20 @@
         <img src="./img/scissors.png" alt="scissors" class="gameIcon scissors" />
       </div>
 
-      <div class="gameControls">
-        <div class="aiMove">Computer move: rock</div>
-        <div class="playerScore">Player score:0</div>
-        <div class="aiScore">Computer score:0</div>
+      <h2>Computer Move</h2>
+      <div class="gameIcons">
+        <img src="./img/rock.png" alt="rock" class="gameIcon rock disabled" />
+        <img src="./img/paper.png" alt="paper" class="gameIcon paper" />
+        <img src="./img/scissors.png" alt="scissors" class="gameIcon scissors disabled" />
       </div>
-      <button class="newGame__btn">New game</button>
+      <div class="gameControls">
+        <div class="playerScore">Player score:0</div>
+        <div class="computerScore">Computer score:0</div>
+      </div>
+      <button class="newGame">New game</button>
     </main>
     <footer>
-      <a href="https://www.vecteezy.com/free-vector/rock-paper-scissors">Rock Paper Scissors Vectors by Vecteezy</a>
+      <a class="credits" href="https://www.vecteezy.com/free-vector/rock-paper-scissors">Rock Paper Scissors Vectors by Vecteezy</a>
     </footer>
   </body>
 </html>
