add game logic and score display

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="playerScore">Player score: <span id="playerScore">0</span></div>
         <div class="computerScore">Computer score: <span id="computerScore">0</span></div>
       </div>
-      <button class="newGame">New game</button>
+      <button class="newGame" onclick="reset()">New game</button>
     </main>
     <footer>
       <a class="credits" href="https://www.vecteezy.com/free-vector/rock-paper-scissors">Rock Paper Scissors Vectors by Vecteezy</a>
