add win/lose/draw notification

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </div>
       <div class="gameControls">
         <div class="playerScore">Player score: <span id="playerScore">0</span></div>
+        <div id="result" class="roundOutcome">You win</div>
         <div class="computerScore">Computer score: <span id="computerScore">0</span></div>
       </div>
       <button class="newGame" onclick="reset()">New game</button>
